Fixed spacing on homepage and changed explination box border & color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -684,35 +684,32 @@ color: white;
 .textBox{
   font-size: 20px;
   font-weight: 200;
-  margin-top: 100px;
+  margin-top: 10px;
   padding: 10px;
   float: right;
-  color:#fff;
-  border: 5px solid rgba(255, 255, 255, 0.408);
-  background: rgba(0, 0, 0, 0.231);
+  color:rgb(236, 236, 236);
+  border: 2px solid red;
+  border-radius: 8px;  background:rgb(17, 17, 17);
   width: auto;
-  margin-right: 80px;
-
+  margin-right: 10%;
 }
 
 .ontop{
     font-size: 36px;
     color: #fff;
     text-align: center;
-     background:#000;
+    background:#000;
     border-radius: 50%;
     padding-top:20px;
-
     width:80px;
     height:80px;
-
-
   }
 
+  
 .features-clean .item {
     min-height:100px;
     padding-left:80px;
-    margin-bottom:40px;
+    margin-bottom:2px;
     text-align: center;
   }
 
@@ -941,7 +938,7 @@ hr { margin:1px}
 
 #howItWorks {
   background-size: cover;
-  height:400px;
+  height:200px;
 }
 
 /* Form */
